--- a/index.html
+++ b/index.html
@@ -5,9 +5,72 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bangladesh</title>
+<link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
 </head>
 <body>
     
+<header class="title"><h1>PEOPLE'S REPUBLIC OF BANGLADESH</h1></header>
+
+<div class="first-section">
+
+<div class="info">
+<h1>Bangladesh</h1>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus laboriosam rem sed praesentium porro laborum tempore ipsam soluta, quo inventore doloremque magnam debitis doloribus ad. Neque velit placeat optio dolore praesentium laborum maxime fugit. Atque incidunt, natus explicabo dolorem magnam corrupti iste, recusandae ipsa facilis iure quasi similique praesentium ab vel, minima sint assumenda odit facere doloremque quae. Ad architecto quia enim quidem earum laboriosam provident sit quisquam eum facilis esse cum corrupti magni error reprehenderit, vitae deserunt aliquam autem accusamus molestias eligendi iusto? Amet quaerat nesciunt adipisci cupiditate magnam libero ex eum eius vero, praesentium iusto voluptates aspernatur aperiam.</p>
+
+
+<button class="details">Details</button>
+</div>
+
+<div class="map">
+
+<div class="photo">
+    <img src="images/map.png" alt="">
+</div>
+</div>
+
+</div>
+
+<div class="secound-section">
+    <h1>Bangladesh All Divesions</h1>
+
+   <div class="division">
+
+    <div class="dhaka">
+        <div class="city-img">
+<img src="images/khulna.jpg" alt="">
+        </div>
+        <h2>Dhaka</h2>
+        <div class="text">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur veniam iusto voluptatum sequi rerum officiis mollitia qui ipsa eaque quisquam, dolor provident hic magnam dolore velit accusamus numquam omnis nisi totam quidem laborum ab quia pariatur tempore! Vero provident eveniet ut voluptatem repudiandae aliquid, nostrum facere? Rem vero impedit ex.</p>
+            <button class="btn">Details</button>
+        </div>
+    </div>
+    <div class="dhaka">
+        <div class="city-img">
+<img src="images/khulna.jpg" alt="">
+        </div>
+     <div class="text">
+        <h2>Khulna</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur veniam iusto voluptatum sequi rerum officiis mollitia qui ipsa eaque quisquam, dolor provident hic magnam dolore velit accusamus numquam omnis nisi totam quidem laborum ab quia pariatur tempore! Vero provident eveniet ut voluptatem repudiandae aliquid, nostrum facere? Rem vero impedit ex.</p>
+        <button class="btn">Details</button>
+     </div>
+    </div>
+    <div class="dhaka">
+        <div class="city-img">
+<img src="images/Rajshahi.jpg" alt="">
+        </div>
+     <div class="text">
+        <h2>Rajshahi</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur veniam iusto voluptatum sequi rerum officiis mollitia qui ipsa eaque quisquam, dolor provident hic magnam dolore velit accusamus numquam omnis nisi totam quidem laborum ab quia pariatur tempore! Vero provident eveniet ut voluptatem repudiandae aliquid, nostrum facere? Rem vero impedit ex.</p>
+      <br>
+      <br>  <button class="btn">Details</button>
+     </div>
+    </div>
+    </div>
+</div>
+<br>
+<hr>
+<p class="footer">Copyright © 2021 | Rs Mahmud.govt kc college,jhenaideha</p>
 </body>
 </html>
